--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,5 +23,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Test
-        run: go test ./...
+      - name: Test (firestore)
+        run: cd firestore; go test ./...
+      - name: Test (service)
+        run: cd service; go test ./...
