--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,17 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Test (db)
+        run: cd db; go test ./...
       - name: Test (firestore)
         run: cd firestore; go test ./...
+      - name: Test (http/api)
+        run: cd http/api; go test ./...
+      - name: Test (http/client)
+        run: cd http/client; go test ./...
+      - name: Test (http/server)
+        run: cd http/server; go test ./...
       - name: Test (service)
         run: cd service; go test ./...
+      - name: Test (main)
+        run: go test ./...
