--- a/.goreleaser.linux.yml
+++ b/.goreleaser.linux.yml
@@ -2,7 +2,7 @@ project_name: "keys"
 builds:
   - id: keys
     binary: keys
-    main: ./service/keys/main.go
+    main: ./service/keys/
     env:
       - CGO_ENABLED=0
     goos:
@@ -13,7 +13,7 @@ builds:
       - arm
   - id: keysd
     binary: keysd
-    main: ./main.go
+    main: ./
     env:
       - CGO_ENABLED=0
     goos:
