--- a/.goreleaser.linux.yml
+++ b/.goreleaser.linux.yml
@@ -2,7 +2,7 @@ project_name: "keys"
 builds:
   - id: keys
     binary: keys
-    main: ./service/keys/
+    main: ./service/keys/main.go
     env:
       - CGO_ENABLED=0
     goos:
