--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install gosec
         uses: "cedrickring/golang-action@1.4.1"
         with:
-          args: go get github.com/securego/gosec/cmd/gosec
+          args: go install github.com/securego/gosec/cmd/gosec
       - name: gosec (db)
         run: cd db; gosec .
       - name: gosec (http/api)
