--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,21 +9,21 @@ jobs:
       - name: Install gosec
         uses: "cedrickring/golang-action@1.4.1"
         with:
-          args: go install github.com/securego/gosec/cmd/gosec
+          args: go get github.com/securego/gosec/cmd/gosec
       - name: gosec (db)
-        run: cd db; gosec .
+        run: cd db; `go env GOPATH`/bin/gosec .
       - name: gosec (http/api)
-        run: cd http/api; gosec .
+        run: cd http/api; `go env GOPATH`/bin/gosec .
       - name: gosec (http/api)
-        run: cd http/api; gosec .
+        run: cd http/api; `go env GOPATH`/bin/gosec .
       - name: gosec (http/client)
-        run: cd http/client; gosec .
+        run: cd http/client; `go env GOPATH`/bin/gosec .
       - name: gosec (http/server)
-        run: cd http/server; gosec .
+        run: cd http/server; `go env GOPATH`/bin/gosec .
       - name: gosec (service)
-        run: cd service; gosec .
+        run: cd service; `go env GOPATH`/bin/gosec .
       - name: gosec (main)
-        run: gosec .
+        run: `go env GOPATH`/bin/gosec .
   test:
     strategy:
       matrix:
