Move main to service/keysd

--- a/.goreleaser.linux.yml
+++ b/.goreleaser.linux.yml
@@ -13,7 +13,7 @@ builds:
       # - arm
   - id: keysd
     binary: keysd
-    main: ./
+    main: ./service/keysd/main.go
     env:
       - CGO_ENABLED=0
     goos:
