--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install gosec
         uses: "cedrickring/golang-action@1.4.1"
         with:
-          args: go get github.com/securego/gosec/cmd/gosec; gosec ./...      
+          args: go get github.com/securego/gosec/cmd/gosec; (cd db && gosec .) && (cd firestore && gosec .) && (cd http/api && gosec .) && (cd http/client && gosec .) && (cd http/server && gosec .) && (cd service && gosec .) && (cd wormhole && gosec .)
   test:
     strategy:
       matrix:
