--- a/service/.goreleaser.linux.yml
+++ b/service/.goreleaser.linux.yml
@@ -2,7 +2,7 @@ project_name: "keys"
 builds:
   - id: keys
     binary: keys
-    main: ./service/keys/main.go
+    main: ./keys/main.go
     env:
       - CGO_ENABLED=0
     goos:
@@ -13,7 +13,7 @@ builds:
       # - arm
   - id: keysd
     binary: keysd
-    main: ./service/keysd/main.go
+    main: ./keysd/main.go
     env:
       - CGO_ENABLED=0
     goos:
