--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ matrix.go-version }}
-      - name: Lint with flake8
-        if: matrix.os == "ubuntu-latest"
+      - name: Install libfido2 (linux)
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt install software-properties-common
           sudo apt-add-repository ppa:yubico/stable
