--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,24 +10,23 @@ jobs:
         uses: "cedrickring/golang-action@1.4.1"
         with:
           args: go get github.com/securego/gosec/cmd/gosec; (cd db && gosec .) && (cd firestore && gosec .) && (cd http/api && gosec .) && (cd http/client && gosec .) && (cd http/server && gosec .) && (cd service && gosec .) && (cd wormhole && gosec .)
-  test:
-    strategy:
-      matrix:
-        go-version: [1.13.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+  test:	
+    strategy:	
+      matrix:	
+        os: ['ubuntu-latest']
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Install libfido2 (linux)
-        if: matrix.os == "ubuntu-latest"
+      - name: Install dependencies
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt install software-properties-common
           sudo apt-add-repository ppa:yubico/stable
           sudo apt update
           sudo apt install libfido2-dev
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13.x      
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test (db)
