--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,16 +13,19 @@ jobs:
   test:	
     strategy:	
       matrix:	
-        os: ['ubuntu-latest']
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Install dependencies
+      - name: Install dependencies (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt install software-properties-common
           sudo apt-add-repository ppa:yubico/stable
           sudo apt update
           sudo apt install libfido2-dev
+      - name: Install dependencies (macos)
+        if: matrix.os == 'macos-latest'
+        run: brew install libfido2
       - name: Install Go
         uses: actions/setup-go@v1
         with:
