--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,9 +27,11 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: brew install libfido2
       - name: Install dependencies (windows)
+        if: matrix.os == 'windows-latest'
         run: |
           echo "::add-path::${{ github.workspace }}"
           echo $PATH
+          ls -al
       - name: Install Go
         uses: actions/setup-go@v1
         with:
