--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,9 @@ jobs:
         uses: "cedrickring/golang-action@1.4.1"
         with:
           args: go get github.com/securego/gosec/cmd/gosec; (cd db && gosec .) && (cd firestore && gosec .) && (cd http/api && gosec .) && (cd http/client && gosec .) && (cd http/server && gosec .) && (cd service && gosec .) && (cd wormhole && gosec .)
-  test:	
-    strategy:	
-      matrix:	
+  test:
+    strategy:
+      matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -31,14 +31,13 @@ jobs:
         run: |
           echo "::add-path::${{ github.workspace }}"
           echo $Env:Path
-          pwd
-          ls
+          dir
           scoop bucket add keys.pub https://github.com/keys-pub/scoop-bucket
           scoop install libfido2
       - name: Install Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.13.x      
+          go-version: 1.13.x
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test (db)
