--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,3 +49,5 @@ jobs:
         run: cd http/server; go test ./...
       - name: Test (service)
         run: cd service; go test ./...
+      - name: Test (wormhole)
+        run: cd wormhole; go test ./...
