--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,14 +40,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test (db)
-        run: cd db; go test ./...
+        run: cd db; go test -v ./...
       - name: Test (http/api)
-        run: cd http/api; go test ./...
+        run: cd http/api; go test -v ./...
       - name: Test (http/client)
-        run: cd http/client; go test ./...
+        run: cd http/client; go test -v ./...
       - name: Test (http/server)
-        run: cd http/server; go test ./...
+        run: cd http/server; go test -v ./...
       - name: Test (service)
-        run: cd service; go test ./...
+        run: cd service; go test -v ./...
       - name: Test (wormhole)
-        run: cd wormhole; go test ./...
+        if: matrix.os == 'ubuntu-latest'
+        run: cd wormhole; go test -v ./...
