--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,25 +33,23 @@ jobs:
           Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
           scoop bucket add keys.pub https://github.com/keys-pub/scoop-bucket
           scoop install libfido2
-          # echo "::add-path::$HOME/scoop/apps/libfido2/current"
+          echo "::add-path::$HOME/scoop/apps/libfido2/current"
       - name: Install Go
         uses: actions/setup-go@v1
         with:
           go-version: 1.13.x
       - name: Checkout code
         uses: actions/checkout@v2
-      # - name: Test (db)
-      #   run: cd db; go test -v ./...
-      # - name: Test (http/api)
-      #   run: cd http/api; go test -v ./...
-      # - name: Test (http/client)
-      #   run: cd http/client; go test -v ./...
-      # - name: Test (http/server)
-      #   run: cd http/server; go test -v ./...
+      - name: Test (db)
+        run: cd db; go test -v ./...
+      - name: Test (http/api)
+        run: cd http/api; go test -v ./...
+      - name: Test (http/client)
+        run: cd http/client; go test -v ./...
+      - name: Test (http/server)
+        run: cd http/server; go test -v ./...
       - name: Test (service)
-        run: |
-          echo $Env:Path
-          cd service; go test -v ./...
-      # - name: Test (wormhole)
-      #   if: matrix.os == 'ubuntu-latest'
-      #   run: cd wormhole; go test -v ./...
+        run: cd service; go test -v ./...
+      - name: Test (wormhole)
+        if: matrix.os == 'ubuntu-latest'
+        run: cd wormhole; go test -v ./...
