--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Test (db)
         run: cd db; go test -v ./...
       - name: Test (fido2)
+        if: matrix.os == 'macos-latest'
         run: cd fido2; go test -v ./...
       - name: Test (http/api)
         run: cd http/api; go test -v ./...
