--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Test (http/server)
         run: cd http/server; go test -v ./...
       - name: Test (service)
+        if: matrix.os == 'macos-latest'
         run: cd service; go test -v ./...
       - name: Test (wormhole)
         if: matrix.os == 'ubuntu-latest'
