--- a/service/.goreleaser.linux.yml
+++ b/service/.goreleaser.linux.yml
@@ -3,8 +3,6 @@ builds:
   - id: keys
     binary: keys
     main: ./keys/main.go
-    env:
-      - CGO_ENABLED=0
     goos:
       - linux
     goarch:
@@ -14,14 +12,20 @@ builds:
   - id: keysd
     binary: keysd
     main: ./keysd/main.go
-    env:
-      - CGO_ENABLED=0
     goos:
       - linux
     goarch:
       - amd64
       - 386
       # - arm
+  - id: fido2
+    main: ./fido2/plugin.go
+    binary: fido2.so
+    flags: -buildmode=plugin
+    goos:
+      - linux
+    goarch:
+      - amd64
 archives:
   - replacements:
       386: i386
