--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install libfido2
+          brew install libgit2
       - name: Install dependencies (windows)
         if: matrix.os == 'windows-latest'
         run: |
