--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install dependencies (macos)
         if: matrix.os == 'macos-latest'
         run: |
+          brew install pkg-config
           brew install libfido2
           brew install libgit2
       - name: Install dependencies (windows)
