--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,4 +56,5 @@ jobs:
       - name: Test (http/server)
         run: cd http/server; go test -v ./...
       - name: Test (service)
+        if: matrix.os == 'macos-latest'
         run: cd service; go test -v ./...
