--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,11 +23,13 @@ jobs:
           sudo apt-add-repository ppa:yubico/stable
           sudo apt update
           sudo apt install libfido2-dev
+          sudo apt install libgit2-dev
       - name: Install dependencies (macos)
         if: matrix.os == 'macos-latest'
         run: |
-          brew tap keys-pub/tap
-          brew install keys-pub/tap/libfido2
+          brew install pkg-config
+          brew install libfido2
+          brew install libgit2
       - name: Install dependencies (windows)
         if: matrix.os == 'windows-latest'
         run: |
