--- a/auth/rpc/plugin/.goreleaser.yml
+++ b/auth/rpc/plugin/.goreleaser.yml
@@ -1,7 +1,7 @@
 project_name: "fido2"
 builds:
   - id: fido2
-    main: ./fido2/plugin.go
+    main: plugin.go
     binary: fido2.so
     flags: -buildmode=plugin
     env:
@@ -11,7 +11,7 @@ builds:
     goarch:
       - amd64
     hooks:
-      post: ../scripts/codesign.sh {{ .Path }}
+      post: ../../../scripts/codesign.sh {{ .Path }}
 archives:
   - replacements:
       386: i386
