--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,14 +11,15 @@ jobs:
         with:
           args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd wormhole && gosec .)
   golangci-lint:
-    name: golangci-lint
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run golangci-lint
-        uses: actions-contrib/golangci-lint@v1
+      - name: Install golangci-lint
+        run: |
+          brew install golangci/tap/golangci-lint
+      - name: Install gosec
+        uses: "cedrickring/golang-action@1.4.1"
         with:
-          working-directory: service
+          args: (cd service && golangci-lint run)
   test:
     strategy:
       matrix:
