--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Install gosec
+      - name: Run gosec
         uses: "cedrickring/golang-action@1.4.1"
         with:
           args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd wormhole && gosec .)
@@ -16,10 +16,10 @@ jobs:
       - name: Install golangci-lint
         run: |
           brew install golangci/tap/golangci-lint
-      - name: Install gosec
-        uses: "cedrickring/golang-action@1.4.1"
-        with:
-          args: (cd service && golangci-lint run)
+      - name: Run golangci-lint
+        run: |
+          (cd service && golangci-lint run)
+          (cd vault && golangci-lint run)
   test:
     strategy:
       matrix:
