--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,22 +6,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install gosec
-        run: |
-          curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s v2.3.0
       - name: Run gosec
-        run: |
-          (cd auth/fido2 && ./bin/gosec ./...)
-          (cd auth/mock && ./bin/gosec ./...)
-          (cd auth/rpc && ./bin/gosec ./...)
-          (cd firestore && ./bin/gosec ./...)
-          (cd http/api && ./bin/gosec ./...)
-          (cd http/client && ./bin/gosec ./...)
-          (cd http/server && ./bin/gosec ./...)
-          (cd sdb && ./bin/gosec ./...)
-          (cd service && ./bin/gosec ./...)
-          (cd vault && ./bin/gosec ./...)
-          (cd wormhole && ./bin/gosec .)
+      - uses: "cedrickring/golang-action@1.3.0"
+        with:
+          args: |
+            go get github.com/securego/gosec/cmd/gosec
+            (cd auth/fido2 && ./bin/gosec ./...)
+            (cd auth/mock && ./bin/gosec ./...)
+            (cd auth/rpc && ./bin/gosec ./...)
+            (cd firestore && ./bin/gosec ./...)
+            (cd http/api && ./bin/gosec ./...)
+            (cd http/client && ./bin/gosec ./...)
+            (cd http/server && ./bin/gosec ./...)
+            (cd sdb && ./bin/gosec ./...)
+            (cd service && ./bin/gosec ./...)
+            (cd vault && ./bin/gosec ./...)
+            (cd wormhole && ./bin/gosec .)
   golangci-lint:
     name: Linter
     runs-on: macos-latest
