--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run gosec
-      - uses: "cedrickring/golang-action@1.3.0"
+        uses: "cedrickring/golang-action@1.3.0"
         with:
           args: |
             go get github.com/securego/gosec/cmd/gosec
