--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,21 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run gosec
-        uses: "cedrickring/golang-action@1.3.0"
+        uses: "cedrickring/golang-action@1.4.1"
         with:
-          args: |
-            go get github.com/securego/gosec/cmd/gosec
-            (cd auth/fido2 && gosec ./...)
-            (cd auth/mock && gosec ./...)
-            (cd auth/rpc && gosec ./...)
-            (cd firestore && gosec ./...)
-            (cd http/api && gosec ./...)
-            (cd http/client && gosec ./...)
-            (cd http/server && gosec ./...)
-            (cd sdb && gosec ./...)
-            (cd service && gosec ./...)
-            (cd vault && gosec ./...)
-            (cd wormhole && gosec .)
+          args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/mock && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd vault && gosec ./...) && (cd wormhole && gosec .)
   golangci-lint:
     name: Linter
     runs-on: macos-latest
