--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,11 +5,35 @@ jobs:
     name: Review security
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Install gosec
+      - uses: actions/checkout@v2
+      - name: Run gosec
         uses: "cedrickring/golang-action@1.4.1"
         with:
-          args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd wormhole && gosec .)
+          args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/mock && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd vault && gosec ./...) && (cd wormhole && gosec .)
+  golangci-lint:
+    name: Linter
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          brew install libfido2
+      - name: Install golangci-lint
+        run: |
+          brew install golangci/tap/golangci-lint
+      - name: Run golangci-lint
+        run: |
+          (cd auth/fido2 && golangci-lint run)
+          (cd auth/mock && golangci-lint run)
+          (cd auth/rpc && golangci-lint run)
+          (cd firestore && golangci-lint run)
+          (cd http/api && golangci-lint run)
+          (cd http/client && golangci-lint run)
+          (cd http/server && golangci-lint run)
+          (cd sdb && golangci-lint run)
+          (cd service && golangci-lint run)
+          (cd vault && golangci-lint run)
+          (cd wormhole && golangci-lint run)
   test:
     strategy:
       matrix:
@@ -23,13 +47,11 @@ jobs:
           sudo apt-add-repository ppa:yubico/stable
           sudo apt update
           sudo apt install libfido2-dev
-          sudo apt install libgit2-dev
       - name: Install dependencies (macos)
         if: matrix.os == 'macos-latest'
         run: |
           brew install pkg-config
           brew install libfido2
-          brew install libgit2
       - name: Install dependencies (windows)
         if: matrix.os == 'windows-latest'
         run: |
@@ -44,19 +66,19 @@ jobs:
           go-version: 1.13.x
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Test (sdb)
-        run: (cd sdb && go test -v ./...)
-      - name: Test (auth)
+      - name: Test
+        shell: bash
+        run: |
+          (cd auth/fido2 && go test -v ./...)          
+          (cd auth/mock && go test -v ./...)          
+          (cd http/api && go test -v ./...)
+          (cd http/client && go test -v ./...)
+          (cd http/server && go test -v ./...)
+          (cd sdb && go test -v ./...)
+          (cd service && go test -v ./...)
+          (cd vault && go test -v ./...)
+          # (cd wormhole && go test -v ./...)
+      - name: Test (macos)
         if: matrix.os == 'macos-latest'
         run: |
           (cd auth/rpc && go test -v ./...)
-          (cd auth/fido2 && go test -v ./...)
-      - name: Test (http/api)
-        run: (cd http/api && go test -v ./...)
-      - name: Test (http/client)
-        run: (cd http/client && go test -v ./...)
-      - name: Test (http/server)
-        run: (cd http/server && go test -v ./...)
-      - name: Test (service)
-        if: matrix.os == 'macos-latest'
-        run: (cd service && go test -v ./...)
