--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
           p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+      - name: Install dependencies
+        run: |
+          brew install goreleaser
       - name: Build
         run: |
           git config --global user.email "keys.pub"
