--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,6 @@ jobs:
           git config --global user.name "keys.pub"
           git tag -a ${GITHUB_REF##*/} -m ${GITHUB_REF##*/}
           cd service
-          goreleaser --config=.goreleaser.linux.yml
+          ~/.bin/goreleaser --config=.goreleaser.linux.yml
           cd ../auth/rpc/plugin
-          goreleaser --config=.goreleaser.linux.yml
+          ~/.bin/goreleaser --config=.goreleaser.linux.yml
