--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Install dependencies
         run: |
           curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh
+          find .
+          pwd
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
