--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/setup-go@v2
       - name: Install dependencies
         run: |
-          curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh
+          curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
           find .
           pwd
       - name: Build
