--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v2
-      - name: Install dependencies
+      - name: Install dependencies (goreleaser)
         run: |
           export BINDIR=$HOME
           curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
+      - name: Install dependencies (libfido2)
+        run: |
+          sudo apt install software-properties-common
+          sudo apt-add-repository ppa:yubico/stable
+          sudo apt update
+          sudo apt install libfido2-dev
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
