--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,8 @@
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 name: Test
 jobs:
   security:
@@ -7,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run gosec
-        uses: "cedrickring/golang-action@1.4.1"
+        uses: cedrickring/golang-action@1.5.2
         with:
           args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/mock && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd vault && gosec ./...) && (cd wormhole && gosec .)
   golangci-lint:
@@ -23,17 +27,17 @@ jobs:
           brew install golangci/tap/golangci-lint
       - name: Run golangci-lint
         run: |
-          (cd auth/fido2 && golangci-lint run)
-          (cd auth/mock && golangci-lint run)
-          (cd auth/rpc && golangci-lint run)
-          (cd firestore && golangci-lint run)
-          (cd http/api && golangci-lint run)
-          (cd http/client && golangci-lint run)
-          (cd http/server && golangci-lint run)
-          (cd sdb && golangci-lint run)
-          (cd service && golangci-lint run)
-          (cd vault && golangci-lint run)
-          (cd wormhole && golangci-lint run)
+          (cd auth/fido2 && golangci-lint run --timeout 10m)
+          (cd auth/mock && golangci-lint run --timeout 10m)
+          (cd auth/rpc && golangci-lint run --timeout 10m)
+          (cd firestore && golangci-lint run --timeout 10m)
+          (cd http/api && golangci-lint run --timeout 10m)
+          (cd http/client && golangci-lint run --timeout 10m)
+          (cd http/server && golangci-lint run --timeout 10m)
+          (cd sdb && golangci-lint run --timeout 10m)
+          (cd service && golangci-lint run --timeout 10m)
+          (cd vault && golangci-lint run --timeout 10m)
+          (cd wormhole && golangci-lint run --timeout 10m)
   test:
     strategy:
       matrix:
@@ -61,9 +65,9 @@ jobs:
           scoop install libfido2
           echo "::add-path::$HOME/scoop/apps/libfido2/current"
       - name: Install Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
-          go-version: 1.13.x
+          go-version: "^1.15.0"
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
