--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -55,7 +55,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install pkg-config
-          brew install libfido2
+          brew install keys-pub/tap/libfido2
       - name: Install dependencies (windows)
         if: matrix.os == 'windows-latest'
         run: |
