--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          brew install libfido2
+          brew install keys-pub/tap/libfido2
       - name: Install golangci-lint
         run: |
           brew install golangci/tap/golangci-lint
