--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Run gosec
         uses: cedrickring/golang-action@1.6.0
         with:
-          args: go get github.com/securego/gosec/cmd/gosec; gosec ./...
+          args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/mock && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd vault && gosec ./...) && (cd wormhole && gosec .) && (cd ws/api && gosec .) && (cd ws/client && gosec .) && (cd ws/server && gosec .)
   golangci-lint:
     name: Linter
     runs-on: macos-latest
