--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,9 @@ jobs:
           (cd service && golangci-lint run --timeout 10m)
           (cd vault && golangci-lint run --timeout 10m)
           (cd wormhole && golangci-lint run --timeout 10m)
-          (cd ws && golangci-lint run --timeout 10m)          
+          (cd ws/api && golangci-lint run --timeout 10m)
+          (cd ws/client && golangci-lint run --timeout 10m)
+          (cd ws/server && golangci-lint run --timeout 10m)
   test:
     strategy:
       matrix:
