--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,9 @@ jobs:
           git config --global user.email "keys.pub"
           git config --global user.name "keys.pub"
           git tag -a ${GITHUB_REF##*/} -m ${GITHUB_REF##*/}
-          cd service
-          goreleaser
-          cd ../auth/rpc/plugin
-          goreleaser
+          (cd service/keys; goreleaser)
+          (cd service/keysd; goreleaser)
+          (cd auth/rpc/plugin; goreleaser)
   release-linux:
     runs-on: ubuntu-latest
     steps:
@@ -56,7 +55,6 @@ jobs:
           git config --global user.email "keys.pub"
           git config --global user.name "keys.pub"
           git tag -a ${GITHUB_REF##*/} -m ${GITHUB_REF##*/}
-          cd service
-          $HOME/goreleaser --config=.goreleaser.linux.yml
-          cd ../auth/rpc/plugin
-          $HOME/goreleaser --config=.goreleaser.linux.yml
+          (cd service/keys; $HOME/goreleaser --config=.goreleaser.linux.yml)
+          (cd service/keysd; $HOME/goreleaser --config=.goreleaser.linux.yml)
+          (cd auth/rpc/plugin; $HOME/goreleaser --config=.goreleaser.linux.yml)
