--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,9 +9,13 @@ jobs:
     name: Review security
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "^1.15.0"
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Run gosec
-        uses: cedrickring/golang-action@1.6.0
         shell: bash
         run: ./security.sh
         
