--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,38 +9,28 @@ jobs:
     name: Review security
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Run gosec
-        uses: cedrickring/golang-action@1.6.0
+      - name: Install Go
+        uses: actions/setup-go@v2
         with:
-          args: go get github.com/securego/gosec/cmd/gosec; (cd auth/fido2 && gosec ./...) && (cd auth/mock && gosec ./...) && (cd auth/rpc && gosec ./...) && (cd firestore && gosec ./...) && (cd http/api && gosec ./...) && (cd http/client && gosec ./...) && (cd http/server && gosec ./...) && (cd sdb && gosec ./...) && (cd service && gosec ./...) && (cd vault && gosec ./...) && (cd wormhole && gosec .) && (cd ws/api && gosec .) && (cd ws/client && gosec .) && (cd ws/server && gosec .)
+          go-version: "^1.15.0"
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run gosec
+        shell: bash
+        run: ./security.sh
+        
   golangci-lint:
     name: Linter
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: |
-          brew install keys-pub/tap/libfido2
+        run: brew install keys-pub/tap/libfido2
       - name: Install golangci-lint
-        run: |
-          brew install golangci/tap/golangci-lint
+        run: brew install golangci/tap/golangci-lint
       - name: Run golangci-lint
-        run: |
-          (cd auth/fido2 && golangci-lint run --timeout 10m)
-          (cd auth/mock && golangci-lint run --timeout 10m)
-          (cd auth/rpc && golangci-lint run --timeout 10m)
-          (cd firestore && golangci-lint run --timeout 10m)
-          (cd http/api && golangci-lint run --timeout 10m)
-          (cd http/client && golangci-lint run --timeout 10m)
-          (cd http/server && golangci-lint run --timeout 10m)
-          (cd sdb && golangci-lint run --timeout 10m)
-          (cd service && golangci-lint run --timeout 10m)
-          (cd vault && golangci-lint run --timeout 10m)
-          (cd wormhole && golangci-lint run --timeout 10m)
-          (cd ws/api && golangci-lint run --timeout 10m)
-          (cd ws/client && golangci-lint run --timeout 10m)
-          (cd ws/server && golangci-lint run --timeout 10m)
+        shell: bash
+        run: ./lint.sh
   test:
     strategy:
       matrix:
@@ -75,16 +65,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         shell: bash
-        run: |
-          (cd auth/fido2 && go test -v ./...)          
-          (cd auth/mock && go test -v ./...)          
-          (cd http/api && go test -v ./...)
-          (cd http/client && go test -v ./...)
-          (cd http/server && go test -v ./...)
-          (cd sdb && go test -v ./...)
-          (cd service && go test -v ./...)
-          (cd vault && go test -v ./...)
-          # (cd wormhole && go test -v ./...)
+        run: ./test.sh          
       - name: Test (macos)
         if: matrix.os == 'macos-latest'
         run: |
