--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.39.0
-          echo "::add-path::$(go env GOPATH)/bin"
+          echo "::add-path::${{ github.workspace }}/go/bin"
       - name: Run golangci-lint
         shell: bash
         run: bash -x ./lint.sh
